--- a/EXTRA_CREDIT.html
+++ b/EXTRA_CREDIT.html
@@ -462,13 +462,13 @@ div.tocify {
 <h2>Extra Credit Option 1 – Journal Article Response</h2>
 <div id="total-points-possible-10-one-submission" class="section level4">
 <h4>Total points possible: 10 (one submission)</h4>
-<p><strong>Due at the end of finals period</strong></p>
+<p><strong>Due Monday May 9 by midnight</strong></p>
 <p><strong>Objectives:</strong><br />
 1. Connect the content of this course with active research areas in the expanding, dynamic field of population ecology.<br />
 2. Engage with original scientific literature in this field of study.</p>
 <p>Select a <em>peer-reviewed journal article</em> on a topic <em>relevant to applied population ecology</em>.</p>
 <ul>
-<li>The article should develop a population model to address a conservation or management question - The article could present newly collected data that were then analyzed to parameterize a population model, <em>OR</em> could present an analysis of already existing data to develop a different population model than has already been developed for the species/system. - For an example of the type of article you should look for (PDF is in the “Files” folder on WebCampus and linked to the assignment page):</li>
+<li>The article should develop a population model to address a conservation or management question - The article could present newly collected data that were then analyzed to parameterize a population model, <em>OR</em> could present an analysis of already existing data to develop a different population model than has already been developed for the species/system. - For an example of the type of article you should look for (PDF is in WebCampus):</li>
 </ul>
 <blockquote>
 <p><a href="crowder1994.pdf">Crowder, Larry B., Crouse, D., Heppell, S., and Martin, T. 1994. Predicting the impact of turtle excluder devices on loggerhead sea turtle populations. Ecological Applications 4(3):437–445.</a></p>
@@ -501,10 +501,7 @@ div.tocify {
 <ul>
 <li>The talk, presentation, or seminar should directly discuss population model(s) and the application to a conservation or management question
 <ul>
-<li>The list of suggested online or in-person talks to attend will continuously be updated throughout the semester on the Discussion thread on WebCampus.<br />
-</li>
-<li>If you discover a talk you’d like to attend that is not on the list, please obtain prior approval to make sure it will be accepted for this assignment (and let your fellow classmates know about the opportunity on WebCampus!).</li>
-<li>The talk/presentation should be a minimum of 20 min long.</li>
+<li>The talk/presentation should be a minimum of 40 min long.</li>
 </ul></li>
 </ul>
 <p><strong>Write a response to the talk you attended:</strong></p>
